finished hsb article

--- a/content/post/hsb_2022.md
+++ b/content/post/hsb_2022.md
@@ -1,11 +1,11 @@
 ---
 title: "Heidelberg-Schwarzwald-Bodensee Radweg in einem Rutsch"
 date: 2022-11-03T08:16:19Z
-draft: true
+draft: false
 ---
 Nachdem der Sommer gesundheitlich ganz anders gelaufen war, als ich das eigentlich geplant hatte, wollte ich diesen Herbst noch mal für eine längere Tour aufs Rad zu steigen.
 
-Initial wollte ich ein paar verrückte Gestalten aus dem Ruhrgebiet und Umkreis in Dortmund treffen, um dort mit ihenen auf ein Konzert zu gehen. Aber die steigenden Covid Infektionszahlen Anfang Oktober zeigten schon, dass ein Indoorkonzert für mich nur mit Maske infrage kommen würde. Und selbst das war mir irgendwie zu heiß. 
+Initial wollte ich nach Dortmund fahren und da ein paar verrückte Gestalten aus dem Ruhrgebiet und Umkreis auf einem Doom Metal Konzert zu treffen. Aber die steigenden Covid Infektionszahlen Anfang Oktober zeigten schon, dass ein Indoorkonzert für mich nur mit Maske infrage kommen würde. Und selbst das war mir irgendwie zu heiß. 
 
 Also habe ich die 330 km Tour nach Dortmund gegen eine noch auf Komoot bereitliegende 295 km Tour getauscht. Genauer gesagt war es der Heidelberg-Schwarzwald-Bodensee Radweg, der eh quasi vor meiner Haustür vorbei geht. Also Hotel in Dortmund gegen Hotel in Konstanz getauscht. Wettervorhersage war zwar exzellent, aber draußen schlafen am Bodensee im Herbst klang doch irgendwie zu feucht. Und so konnte ich dann auch die Lenkerrolle zuhause lassen und bin mit sehr leichtem Gepäck gefahren.
 
@@ -13,5 +13,25 @@ Genauer gesagt hatte ich die 6L Apidura Rahmentasche dabei. Im unteren Fach, Wer
 
 Wie oben erwähnt, der Sommer war gesundheitlich durchwachsen. Genauer gesagt, hab ich mich den kompletten August mit einer Covid Infektion rumgeschlagen. Herz und Kreislauf haben ordentlich was abbekommen und die Fahrradkondition musste erst langsam wieder aufgebaut werden. Zwei 60 km Touren durch Rheintal, eine 60 km Tour durch den Kraichgau über Neckargemünd und Heidelberg wurden gefolgt von einer 115 km Tour Richtung Heilbronn und dann am Neckar entlang. Dazu die üblichen kurzen Touren zum Supermarkt oder zur Eisdiele.
 
+
+{{< komoot 956123164  >}}
+
 Naja.. ich war auf jeden Fall halbwegs fit und hab mir gedacht, dass ich es einfach probiere, die Tour zum Bodensee zu fahren. Montag früh ging es bei mir vor der Haustür los. Die ersten 50-60 km bis Pforzheim waren überraschend wellig. Pforzheim, die größte Stadt auf der Tour habe ich schnell durchfahren. Also es war nichts da, was mich animiert hätte Pause zu machen. Etwas außerhalb am Start des Nagoldtal-Radwegs hab ich eine Frühstückspause gemacht und die Kleidungsschichten an die gestiegenen Temperaturen angepasst.
 
+Weiter ging es auf dem wunderschönen Nagoldtal-Radweg. Viele bunte Blätter. Teils auf Schotter, teils auf Asphalt. Wegen Werktag war eigentlich fast niemand unterwegs und ich konnte gut Strecke machen. In Calw gab es einen Espresso und gegen Mittag hab ich Pause in Nagold gemacht. Dort gibt es direkt am Radweg eine schöne Sonnenterasse direkt am Ufer. Ein paar Riegel, Käsebrezeln und Minisalamis später ging es weiter Richtung Horb.
+
+Der Abschnitt zwischen Nagold und Horb hatte dann auch die ersten längeren Steigungen am Stück. Das war gut anstregend, denn viel Höhenmeter hatte ich nicht gemacht in den 2 Monaten zuvor. Naja, irgendwann war der Anstieg geschafft und es ging mit hohem Tempo runter ins Tal nach Horb. Hier hab ich im Stadtzentrum direkt am Radweg eine Bäckerei gefunden, die meine diversen Bedürfnisse befriedigen konnte. Es gab eine Wasserleitung zum Flaschen auffüllen, Backwaren, Cola und ein Klo. ^^
+
+So gestärkt ging es weiter. Natürlich direkt mit Steigung. Denn alles was ich in das Tal von Horb runter gefahren war, musste ich wieder hoch. Alternativ hätte ich einfach den Neckartal-Radweg nach Villingen-Schwenningen nehmen können. Aber ich wollte die Steigung. Naja, die Straße war leer und die Aussicht auf das herbstliche Tal von Horb zwischenzeitlich sehr toll. Auf der Hochebene angekommen, konnte ich dann links die schwäbische Alb sehen und war froh, dass es da nicht auch noch hoch ging. Trotzdem ging es auch ohne die Alb immer wieder hoch und runter und ich hatte dazu zwischenzeitlich ziemlich starken Gegenwind. Wahrscheinlich war das dann auch so ein Zeitpunkt, wo man einfach hätte aufgebern und in einen Zug steigen können. Keine Option natürlich! Ich hab's mir für 20 Minuten auf einer Bank mit Ausblick gemütlich gemacht und ordentlich Proviant konsumiert.
+
+So gestärkt ging es weiter nach Rottweil. Irgendwie dachte ich, dass der Weg durch den Stadtkern laufen würde und ich mich noch mal für den Abend mit Proviant eindecken konnte. Natürlich Fehlanzeige. ;-D Aber die POI-Suche auf OSMAnd (Offline-Karte) zeigte einen Netto-Markt in Lauffen an. Hier gabs dann eine große Dose Redbull und eine Tüte Lachgummi. Also perfekte ausgewogene Verpflegung für den Rest des Abends. Als ich wieder aufs Rad steigen wollte, dachte ich, dass man ja mal nach dem Akkustand des Fahrradcomputers (Wahoo) gucken könnte. Der zeigte 50% Füllstand an. Habe mich kurz gewundert, weil der schon viel leerer sein sollte. Im nächsten Momemnt geht das Teil kommentarlos aus. Also war er vielleicht doch nicht mehr so voll. ;-D Mehrere Versuche mit angeschlossenem Stromkabel haben ihn dann irgendwie wieder zum Leben erweckt. Der Track konnte zumindest zum Teil vom Computer wiederhergestellt werden. Die letzten 30 km bis zum Stop am Supermarkt waren allerdings weg. Ist natürlich ärgerlich, aber in dem Moment war ich froh überhaupt noch Navigation zu haben. Die hätte ich sonst mit Komoot über Kopfhörer machen müssen.
+
+Weiter ging es Richtung Villingen-Schwenningen. Es wurde langsam dunkel, der Verkehr wurde weniger und der Radweg war richtig klasse ausgebaut. Der Kick durch den Energy-Drink sorgte für Spass und gutes Tempo. In Villingen-Schwenningen selbst soll es irgendwo in einem Park direkt an der Route die Neckarquelle geben. Ich hatte vorher aber schon gelesen, dass es gar nicht die wirkliche Quelle war, sondern der Neckar außerhalb in einem Waldgebiet startet. Also gar nicht erst angehalten und weiter. Kurze Zeit später (es war inzwischen komplett dunkel) kam ich in Donareschingen an. Hier gab's dann direkt die zweite Quelle, die ich mir nicht angeschaut habe. Dafür bin ich direkt in eine Querdenker/Pro-Russland Demo geraten. Gleich weiter Gas gegeben und etwas außerhalb an einem total verratzen Döner/Pizza Bringdienst überraschend guten Kaffe bekommen. Dazu hat die Köchin lauthals türkische (?) Schlager gesungen. ;-D
+
+Endspurt - es waren noch grob 70km zu fahren. Ein letzter Anstieg wartete auf mich. Der erste Teil war dann tatsächlich so steil (> 13%), dass ich lieber mal geschoben hab. Wollte mir auf den letzten Kilometern nicht die Knie zerstören. Nach dem ersten Steilstück ging es dann leicht wellig bergauf. Es war richtig neblig geworden, der HSB Radweg lief nur noch über Straßen und tagsüber bzw. mit Verkehr hätte mich das total genervt. Mitten in der schwäbischen Pampa waren die Straßen wie ausgestorben und es ging sehr gut voran. Irgendwann zeigte mir der Computer, dass es von nun an nur noch bergab ging. Also noch mal Pause mitten im nebligen Wald gemacht und die Tüte Lachgummi geleert.
+
+Ab hier ging es dann mit hohem Tempo wie im Tunnel Richtung Radolfszell am Bodensee. Hier war der offizielle Teil des HSB Radwrgs zuende. Da mein Zug (Regional-Express nach Karlsruhe) am nächsten Tag aber von Konstanz aus fuhr, hatte ich mir da das Hotel gebucht. Ab hier ging es noch mal knapp 20 km auf dem wirlich perfekt ausgebauten Bodensee-Radweg weiter. Die ganzen Markierungen bzw. der stellenweise zweispurige Ausbau ließ erahnen, dass es tagsüber ziemlich voll ist auf dem Weg. So war ich natürlich als einziger unterwegs.
+
+Fun Fact: Ich hatte bei der Reservierung des Hotelzimmers angegeben, dass ich wohl gegen Mitternacht ankomme. Tatsächlich hab ich dann um 23:50 Uhr mein Rad an der Rezeption abgestellt. Mein gutes Bauchgefühl für Zeit/Strecke scheint auch auf langen Distanzen ganz gut zu funktionieren.
+
+Tja, alles in allem wieder eine sehr schöne Tour gewesen. Es bleibt dabei: wenn Grundkondition und Verpflegung stimmen, dann machen mir diese langen Touren richtig Spass! :-D
