--- a/content/post/hsb_2022.md
+++ b/content/post/hsb_2022.md
@@ -22,7 +22,7 @@ Weiter ging es auf dem wunderschönen Nagoldtal-Radweg. Viele bunte Blätter. Te
 
 Der Abschnitt zwischen Nagold und Horb hatte dann auch die ersten längeren Steigungen am Stück. Das war gut anstregend, denn viel Höhenmeter hatte ich nicht gemacht in den 2 Monaten zuvor. Naja, irgendwann war der Anstieg geschafft und es ging mit hohem Tempo runter ins Tal nach Horb. Hier hab ich im Stadtzentrum direkt am Radweg eine Bäckerei gefunden, die meine diversen Bedürfnisse befriedigen konnte. Es gab eine Wasserleitung zum Flaschen auffüllen, Backwaren, Cola und ein Klo. ^^
 
-So gestärkt ging es weiter. Natürlich direkt mit Steigung. Denn alles was ich in das Tal von Horb runter gefahren war, musste ich wieder hoch. Alternativ hätte ich einfach den Neckartal-Radweg nach Villingen-Schwenningen nehmen können. Aber ich wollte die Steigung. Naja, die Straße war leer und die Aussicht auf das herbstliche Tal von Horb zwischenzeitlich sehr toll. Auf der Hochebene angekommen, konnte ich dann links die schwäbische Alb sehen und war froh, dass es da nicht auch noch hoch ging. Trotzdem ging es auch ohne die Alb immer wieder hoch und runter und ich hatte dazu zwischenzeitlich ziemlich starken Gegenwind. Wahrscheinlich war das dann auch so ein Zeitpunkt, wo man einfach hätte aufgebern und in einen Zug steigen können. Keine Option natürlich! Ich hab's mir für 20 Minuten auf einer Bank mit Ausblick gemütlich gemacht und ordentlich Proviant konsumiert.
+Der Wahoo sagte, dass es von Horb aus natürlich direkt mit Steigung weiter ging. Denn alles was ich in das Tal von Horb runter gefahren war, musste ich wieder hoch. Alternativ hätte ich einfach den Neckartal-Radweg nach Villingen-Schwenningen nehmen können. Aber irgendwie wollte ich die Steigung. Naja, die Straße war leer und die Aussicht auf das herbstliche Tal von Horb zwischenzeitlich sehr toll. Auf der Hochebene angekommen, konnte ich dann links die schwäbische Alb sehen und war froh, dass es da nicht auch noch hoch ging. Trotzdem ging es auch ohne die Alb immer wieder hoch und runter und ich hatte dazu zwischenzeitlich ziemlich starken Gegenwind. Wahrscheinlich war das dann auch so ein Zeitpunkt, wo man einfach hätte aufgebern und in einen Zug steigen können. Keine Option natürlich! Ich hab's mir für 20 Minuten auf einer Bank mit Ausblick gemütlich gemacht und ordentlich Proviant konsumiert.
 
 So gestärkt ging es weiter nach Rottweil. Irgendwie dachte ich, dass der Weg durch den Stadtkern laufen würde und ich mich noch mal für den Abend mit Proviant eindecken konnte. Natürlich Fehlanzeige. ;-D Aber die POI-Suche auf OSMAnd (Offline-Karte) zeigte einen Netto-Markt in Lauffen an. Hier gabs dann eine große Dose Redbull und eine Tüte Lachgummi. Also perfekte ausgewogene Verpflegung für den Rest des Abends. Als ich wieder aufs Rad steigen wollte, dachte ich, dass man ja mal nach dem Akkustand des Fahrradcomputers (Wahoo) gucken könnte. Der zeigte 50% Füllstand an. Habe mich kurz gewundert, weil der schon viel leerer sein sollte. Im nächsten Momemnt geht das Teil kommentarlos aus. Also war er vielleicht doch nicht mehr so voll. ;-D Mehrere Versuche mit angeschlossenem Stromkabel haben ihn dann irgendwie wieder zum Leben erweckt. Der Track konnte zumindest zum Teil vom Computer wiederhergestellt werden. Die letzten 30 km bis zum Stop am Supermarkt waren allerdings weg. Ist natürlich ärgerlich, aber in dem Moment war ich froh überhaupt noch Navigation zu haben. Die hätte ich sonst mit Komoot über Kopfhörer machen müssen.
 
